[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
default-run = "dnssteal"
edition = "2021"
name = "dnssteal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
base64 = "0.13.0"
chrono = {version = "0.4.11", features = ["serde"]}
env_logger = "0.9.0"
futures = "0.3.4"
log = "0.4.8"
md5 = "0.7.0"
once_cell = "1.3.1"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
structopt = "0.3.12"
tokio = {version = "1.20.3", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1.9"
trust-dns-proto = {version = "0.21.2", default-features = false}
warp = "0.3.2"
